@@ -31,7 +31,7 @@
 
 #include "version_major.h"
 
-#define LIBAVFILTER_VERSION_MINOR  32
+#define LIBAVFILTER_VERSION_MINOR  33
 #define LIBAVFILTER_VERSION_MICRO 100
 
 
