@@ -10,6 +10,7 @@ version 5.1:
 - Vizrt Binary Image encoder/decoder
 - avsynctest source filter
 - feedback video filter
+- pixelize video filter
 
 
 version 5.0:
